--- a/allifmaalcommonapp/templates/allifmaalcommonapp/invoices/add-invoice-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/invoices/add-invoice-details.html
@@ -206,7 +206,7 @@
 <hr>
 
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add/Edit Quote Details</div>
+  <div class="table-details-content-description">Add/Edit Invoice Details</div>
   <form method='POST' action=''>{% csrf_token %}
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
