--- a/allifmaalcommonapp/templates/allifmaalcommonapp/payments/customers/customer-payments.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/payments/customers/customer-payments.html
@@ -93,10 +93,10 @@
     </div>
     <a class="amel-table-list-identifier">Customer Payments:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    <a href="{% url 'allifmaalcommonapp:commonPostedSupplierPayments' user_var glblslug %}">Posted Supplier Payments</a>
     
     <a href="{% url 'allifmaalcommonapp:commonReceiveCustomerMoney' user_var glblslug %}">Receive Customer Payment</a>
-
+    <a href="{% url 'allifmaalcommonapp:commonSupplierPayments' user_var glblslug %}">Supplier Payments</a>
+    <a href="{% url 'allifmaalcommonapp:commonSalaries' user_var glblslug %}">Salary Payments</a>
   </div>
   
       </div><!--end....header column-->
