--- a/allifmaalcommonapp/templates/allifmaalcommonapp/payments/suppliers/supplier-payments.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/payments/suppliers/supplier-payments.html
@@ -93,6 +93,8 @@
     </div>
     <a class="amel-table-list-identifier">Supplier Payments:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+    <a href="{% url 'allifmaalcommonapp:commonSupplierPayments' user_var glblslug %}">Supplier Payments</a>
+    
     <a href="{% url 'allifmaalcommonapp:commonPostedSupplierPayments' user_var glblslug %}">Posted Supplier Payments</a>
     
     <a href="{% url 'allifmaalcommonapp:commonPaySupplierDirect' user_var glblslug %}">New Supplier Payment</a>
