--- a/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/stocks.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/stocks.html
@@ -93,9 +93,9 @@
     </div>
     <a class="amel-table-list-identifier">Inventory:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+    <a href="{% url 'allifmaalcommonapp:commonStockCats' user_var glblslug %}">Categories</a>
     
     <a href="{% url 'allifmaalcommonapp:commonAddStockItem' user_var glblslug %}">New Stock Item</a>
- 
  
   </div>
   
