--- a/allifmaaladminapp/templates/allifmaaladminapp/base/sidetopnavbars/sidetopnavbars.html
+++ b/allifmaaladminapp/templates/allifmaaladminapp/base/sidetopnavbars/sidetopnavbars.html
@@ -37,11 +37,11 @@
         <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddCompanyScope' user_var glblslug %}" >Scopes</a></li>
         
         <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a></li>
-        
+        <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEmailsAndSMS' user_var glblslug %}">Comms</a></li>
         <li><a  class="dropdown-item" href="{% url 'allifmaalcommonapp:commonStaffProfiles' user_var glblslug %}">Profiles</a></li>
         <li><a  class="dropdown-item" href="{% url 'allifmaalcommonapp:commonGeneralLedgers' user_var glblslug %}">GL A/Cs</a></li>
         <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonChartofAccounts' user_var glblslug %}">Chart of A/Cs</a></li>
-        
+        <li><a class="dropdown-item"href="{% url 'allifmaalcommonapp:ui1' user_var glblslug %}">UIs</a></li>
         
         <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEmailsAndSMS' user_var glblslug %}">Comms</a></li>
         <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a></li>
@@ -51,7 +51,7 @@
         <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}">Suppliers</a></li>
         <li><a class="dropdown-item" href="{% url 'allifmaaladminapp:adminCustomerContacts' user_var glblslug %}">Contacts</a></li>
         
-        
+        <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonScrollableTable' user_var glblslug %}">Table</a></li>
         <li><a class="dropdown-item" href="{% url 'allifmaalusersapp:userLogoutPage' %}">Logout</a></li>
 
         <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a></li>
