--- a/allifmaalcommonapp/templates/allifmaalcommonapp/reports/reports.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/reports/reports.html
@@ -6,7 +6,7 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
+<div class="allifmaal-main-container">
 <!--start....main headere-->
 <div class="card-header">
 
@@ -20,7 +20,7 @@
     <a href="{% url 'allifmaalcommonapp:commonCreditorsReportpdf' user_var glblslug %}">Creditors Report</a>
     <a href="{% url 'allifmaalcommonapp:commonDebtorsReport' user_var glblslug %}">Debtors Report</a>
     <a href="{% url 'allifmaalcommonapp:commonAvailableStockpdf' user_var glblslug %}">Available Stock Report</a>
-    
+   
   <div class="dropdown allifmaal-content-dropdown">
     <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
     Modules
@@ -42,186 +42,143 @@
   
   </div><!--end....main headere-->
 <div class="allifmaincontainer">
-    
 <div class="row mt-12"> <!--start....table row-->
-
-  <div class="col-md-12"> <!--start....table column-->
+<div class="col-md-12"> <!--start....table column-->
+    
   
-    <div class="allif-scroll-table"> 
-
+  <div class="allif-scroll-table">
+    <div class="table-responsive allif-full-table">
     <table class="table table-layout">
-    <thead>
-      <tr class="allif-table-header-row" >
+      <thead>
+        <tr class="allif-table-header-row">
+        <td class="allif-fix-table-col">Quote No.</td>
+        <td>Customer</td>
+        <td>Value</td>
+        <td>Stage</td>
+        <td>Date</td>
+        <td>Owner</td>
       
-      <td>Bank Name</td>
-      <td>Account</td>
-      <td>Deposit</td>
-      <td>Withdrawal</td>
-      <td>Balance</td>
-      <td>Edit</td>
-      <td>Delete</td>
-    
-      </tr>
-      </thead>
-      <tbody class="allif-table-body">
-       
-           
-      {% for item in allifqueryset %}   
-      <tr>
-      
-      <td>
-      <a href="{% url 'allifmaalcommonapp:commonBankDetails' item.id user_var glblslug %}" class="allif-table-links">
-      {{item.name}}
-      </a></td>
-      
-      <td>
-      {{item.account}}
-     </td>
-     <td>
-      {{item.deposit}}
-     </td>
-     <td>
-      {{item.withdrawal}}
-     </td>
-     <td>
-      <a href="{% url 'allifmaalcommonapp:commonBankDetails' item.id user_var glblslug %}" class="allif-table-links">
-      {{item.balance}}
-      </a>
-     </td>
-    
-      <td>
-        <a href="{% url 'allifmaalcommonapp:commonEditBank' item.id user_var glblslug %}" class="allif-table-links">Edit</a>
-      </td>
-      
-      <td >
-        <a href="{% url 'allifmaalcommonapp:commonDeleteBank' item.id user_var glblslug %}" class="body-delete-link" >Delete</a>
-      
-    </td>
-    
-   
-      </tr>
-        {% endfor %}
+        <td>Navigate</td>
         
-     
-      </tbody>
-        </table>
+        <td> . . . </td>
+        <td></td>
+        </tr>
+        </thead>
+        <tbody class="allif-table-body">
+         
+        
+        {% for item in allifqueryset %} 
+        <tr data-id="{{item.id}}">
+        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonAddQuoteDetails' item.id user_var glblslug %}">{{item.number}}</a></td>
+       
+            <td>
+            {{item.customer}}
+          </td>
+          <td>
+            <a href="{% url 'allifmaalcommonapp:commonAddQuoteItems' item.id user_var glblslug %}" class="body-delete-link">{{item.total|floatformat:2|intcomma}}</a>
+          </td>
+          <td>
+            {{item.prospect}}
+          </td>
+        
+          <td>
+            {{item.date|date:'d/m/Y'}}
+          </td>
+          <td>
+            {{item.owner}}
+          </td>
     
-      </div>
+         <td>
+          <div class="dropdown allifmaal-content-dropdown">
+            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+            <div class="dropdown-content">
+              <a href="{% url 'allifmaalcommonapp:commonAddQuoteDetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+              <a href="{% url 'allifmaalcommonapp:commonQuoteToPdf' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Download</a>
+              
+              
+              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+              
+            </div>
+          </div>
+          <div class="dropdown allif-confirm-action">
+            
+            <a href="{% url 'allifmaalcommonapp:commonQuotes' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+            <a href="{% url 'allifmaalcommonapp:commonDeleteQuote' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+          </div>
+
+         
+        </td>
+       <td> . . . </td>
+       <td></td>
       
-      </div><!--end....table column-->
+  
+    </tr>
+    {% endfor %}
+    {% if searched_data %}
+    {% for item in searched_data %}
+    <tr data-id="{{item.id}}">
+      <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonAddQuoteDetails' item.id user_var glblslug %}">{{item.number}}</a></td>
+     
+          <td>
+          {{item.customer}}
+        </td>
+        <td>
+          <a href="{% url 'allifmaalcommonapp:commonAddQuoteItems' item.id user_var glblslug %}" class="body-delete-link">{{item.total|floatformat:2|intcomma}}</a>
+        </td>
+        <td>
+          {{item.prospect}}
+        </td>
+      
+        <td>
+          {{item.date|date:'d/m/Y'}}
+        </td>
+        <td>
+          {{item.owner}}
+        </td>
+  
+       <td>
+        <div class="dropdown allifmaal-content-dropdown">
+          <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+          <div class="dropdown-content">
+            <a href="{% url 'allifmaalcommonapp:commonAddQuoteDetails' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+            <a href="{% url 'allifmaalcommonapp:commonQuoteToPdf' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Download</a>
+            
+            
+            <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+            
+          </div>
+        </div>
+        <div class="dropdown allif-confirm-action">
+          
+          <a href="{% url 'allifmaalcommonapp:commonQuotes' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+          <a href="{% url 'allifmaalcommonapp:commonDeleteQuote' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+        </div>
+
+       
+      </td>
+     <td> . . . </td>
+     <td></td>
+    
+
+  </tr>
+    {% endfor %}
+      {%endif %}
+
+      </tbody>
+    </table>
+    </div>
+   </div>
+
+
+  
+  </div><!--end....table column-->
   </div>
 
-</div><!--end....table row-->
-
-<!--end of table-->
-
 </div><!--end of main container of the page....-->
-
+</div>
   {% block scripts %}
-  <!--when you put the js code here, it gives a repetitive results....-->
+ 
   {% endblock %}
-  <script>
-    $("#id_category").change(function(e){
-        output=""
-        var allifselecteditemid=$(this).val();
-        let allifmaalcsrf=$("input[name=csrfmiddlewaretoken]").val();
-        //console.log(allifselecteditemid,allifmaalcsrf);
   
-        //change the data to json so that it can be sent to the backend
-        allifmaaldata={
-        allifidforselecteditem:allifselecteditemid,
-                    //allifcsrfmiddlewaretoken:allifmaalcsrf
-                };
-        
-        $.ajax({
-            url:"{% url 'allifmaalcommonapp:commonSelectedRelatedAccs' %}", //behind the scenes run this url
-            method:"GET",
-            data:allifmaaldata,//this is the collected data sent to the backend
-            dataType:"json",
-        
-        //process the data from the backend...
-        success:function(allifmaalengdata){
-            const datafrombackend=allifmaalengdata
-            const mydata=JSON.stringify(datafrombackend)//converts to json string//work with this data
-            const allifoutputdata=JSON.parse(mydata)
-            console.log(allifoutputdata)
-            no_of_matching_items=0
-            for (i=0; i<allifoutputdata.length; i++){
-                myitemnames=allifoutputdata[i].description//this is working and gives all the item names
-                allifproductid=allifoutputdata[i].id
-              
-                output+=`<tr><td> <a href='/View-Account-Details/${allifproductid}/'</a>`+
-                 allifoutputdata[i].description +
-                "</td><td>" + allifoutputdata[i].balance
-                ;
-                no_of_matching_items++;
-  
-                    };  
-  
-                document.getElementById("numofitems").innerHTML = no_of_matching_items+" "+'Accounts';
-                $("#allifdata").html(output);
-                //////////////////////// end of working section.... below one is just for learning and reference
-                
-                //below lines are just for records
-                //document.getElementById("myobjectsdata").innerHTML =allifoutputdata;
-                //document.getElementById("mydictionarydata").innerHTML =mydata;
-                for(let key in allifoutputdata) {
-                    //console.log(key + ":", allifoutputdata[key]);
-                    }
-  
-                 //"</td><td> <input type='button' value='Edit '  class='btn btn-sm btn btn-warning btnEdit' data-myDocDataId="+
-                //test[i].id + // + // test[i].id +">";
-  
-        
-  
-       
-  
-  
-  
-           
-                /////////////////// start of good progress here ////////////...
-               // const body = document.querySelector("table");
-                //const container = document.createElement("table");
-  
-                //for (const objIndex of datafrombackend) {
-                    
-                    //descrip=objIndex.description
-                   
-                    //const list = document.createElement("tr");
-                    
-                    //for (const stock in objIndex) {
-                        //console.log("")
-                    //const liElement = document.createElement("td");
-                    //liElement.innerHTML = `${stock}:${objIndex[stock]}`;
-                    //liElement.innerHTML = `${objIndex[stock]}`;this gives without the keys
-                    //list.appendChild(liElement);
-                    //}
-                    //container.appendChild(list);
-               // }
-                //body.appendChild(container);
-                
-                
-  
-  
-  
-               //this section is also showing the results required...
-                datafrombackend.map(item=>{
-                    mydatadescription=item.description
-                    const myoption=document.createElement('div')
-                    myoption.textContent=item.description
-                });
-  
-                datafrombackend.forEach(element => {
-                allif=element.description
-                });
-  
-             
-               }
-        });
-      
-    })
-  
-  
-  </script>
    {% endblock %}
    
